src/objects/Performance_Result__c.object
<CustomObject>
    <description>An add on to the Performance measure application that will allow the various organizations to report on their measures.</description>
    <fields>
        <fullName>A_Denominator_Definition__c</fullName>
        <formula>Performance_Measure__r.Denominator_Definition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Denominator_Units__c</fullName>
        <formula>Performance_Measure__r.Denominator_Unit_of_Measurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Numerator_Definition__c</fullName>
        <formula>Performance_Measure__r.Numerator_Definition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Numerator_Units__c</fullName>
        <formula>Performance_Measure__r.Numerator_Unit_of_Measurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Q1_Denominator__c</fullName>
        <label>Q1 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Q1_Numerator__c</fullName>
        <label>Q1 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Q2_Denominator__c</fullName>
        <label>Q2 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Q2_Numerator__c</fullName>
        <label>Q2 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Q3_Denominator__c</fullName>
        <label>Q3 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Q3_Numerator__c</fullName>
        <label>Q3 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Support__c</fullName>
        <defaultValue>&quot;Enter performance results in the native units for the numerator of the measure and the denominator of the measure.  Report numbers in cumulative performance to the date reported using the appropriate units.&quot;</defaultValue>
        <label>Actual Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_To_Date__c</fullName>
        <defaultValue>&quot;Enter performance results and targets cumulative performance to the date reported.  Enter values in appropriate units. &quot;</defaultValue>
        <label>Cumulative To Date</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denominator_Units__c</fullName>
        <formula>Performance_Measure__r.Denominator_Unit_of_Measurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Formula__c</fullName>
        <formula>TEXT( Fiscal_Year__c )</formula>
        <label>FY Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year_dupe_check__c</fullName>
        <description>Used to check for duplicate fy on created Reports</description>
        <label>Fiscal Year dupe check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicator_Units__c</fullName>
        <formula>Performance_Measure__r.Indicator_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Q1_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Q1 Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Q2_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Q2 Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Q3_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Q3 Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Targets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Performance Managers only.</description>
        <label>Lock Targets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this Performance Report entry needs to be deleted please mark this box</inlineHelpText>
        <label>Marked For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numerator_Units__c</fullName>
        <formula>Performance_Measure__r.Numerator_Unit_of_Measurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Measure__c</fullName>
        <label>Performance Indicator</label>
        <referenceTo>Performance_Indicator__c</referenceTo>
        <relationshipLabel>Performance Results</relationshipLabel>
        <relationshipName>Performance_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q1_Actual__c</fullName>
        <label>Q1 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Color_Status__c</fullName>
        <formula>IMAGE(
CASE( Q1_Status__c ,
&quot;Performance Not Reported&quot;, &quot;/resource/1321982287000/RedFlag&quot;,
&quot;Off Target&quot;, &quot;/resource/1321982312000/YellowFlag&quot;,
&quot;On Target&quot;, &quot;/resource/1321982245000/GreenFlag&quot;,
&quot;Performance Data Not Available&quot;, &quot;/resource/1345065926000/BlueFlag&quot;,&quot;/s.gif&quot;),
CASE( Q1_Status__c,
&quot;Performance Not Reported&quot;, &quot;Performance Not Reported&quot;,
&quot;Off Target&quot;, &quot;Off Target&quot;,
&quot;On Target&quot;, &quot;On Target&quot;,
&quot;Performance Data Not Available&quot;, &quot;Performance Data Not Available&quot;,&quot;Status Flag&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red = NO Data, Yellow = Off Target, Green = On Target,  No color = Not Available</inlineHelpText>
        <label>Q-1 Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Explanation_of_Status__c</fullName>
        <inlineHelpText>You have 32768 characters</inlineHelpText>
        <label>Q1 Explanation of Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q1_Likelihood__c</fullName>
        <label>Q1 Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Risks_and_Challenges__c</fullName>
        <inlineHelpText>You have 32,768 Characters</inlineHelpText>
        <label>Q1 Risks and Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q1_Status__c</fullName>
        <label>Q1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Target</fullName>
                </value>
                <value>
                    <fullName>Off Target</fullName>
                </value>
                <value>
                    <fullName>Performance Not Reported</fullName>
                </value>
                <value>
                    <fullName>Performance Data Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Target__c</fullName>
        <label>Q1 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Actual__c</fullName>
        <label>Q2 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Color_Status__c</fullName>
        <formula>IMAGE(
CASE( Q2_Status__c ,
&quot;Performance Not Reported&quot;, &quot;/resource/1321982287000/RedFlag&quot;,
&quot;Off Target&quot;, &quot;/resource/1321982312000/YellowFlag&quot;,
&quot;On Target&quot;, &quot;/resource/1321982245000/GreenFlag&quot;,
&quot;Performance Data Not Available&quot;, &quot;/resource/1345065926000/BlueFlag&quot;,&quot;/s.gif&quot;),
CASE( Q2_Status__c,
&quot;Performance Not Reported&quot;, &quot;Performance Not Reported&quot;,
&quot;Off Target&quot;, &quot;Off Target&quot;,
&quot;On Target&quot;, &quot;On Target&quot;,
&quot;Performance Data Not Available&quot;, &quot;Performance Data Not Available&quot;,&quot;Status Flag&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red = NO Data, Yellow = Off Target, Green = On Target,  Blue = Not Available</inlineHelpText>
        <label>Q-2 Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Explanation_of_Status__c</fullName>
        <label>Q2 Explanation of Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q2_Likelihood__c</fullName>
        <label>Q2 Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2_Risks_and_Chanllenges__c</fullName>
        <label>Q2 Risks and Chanllenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q2_Status__c</fullName>
        <label>Q2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Target</fullName>
                </value>
                <value>
                    <fullName>Off Target</fullName>
                </value>
                <value>
                    <fullName>Performance Not Reported</fullName>
                </value>
                <value>
                    <fullName>Performance Data Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2_Target__c</fullName>
        <label>Q2 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Actual__c</fullName>
        <label>Q3 Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Color_Status__c</fullName>
        <formula>IMAGE(
CASE( Q3_Status__c ,
&quot;Performance Not Reported&quot;, &quot;/resource/1321982287000/RedFlag&quot;,
&quot;Off Target&quot;, &quot;/resource/1321982312000/YellowFlag&quot;,
&quot;On Target&quot;, &quot;/resource/1321982245000/GreenFlag&quot;,
&quot;Performance Data Not Available&quot;, &quot;/resource/1345065926000/BlueFlag&quot;,&quot;/s.gif&quot;),
CASE( Q3_Status__c,
&quot;Performance Not Reported&quot;, &quot;Performance Not Reported&quot;,
&quot;Off Target&quot;, &quot;Off Target&quot;,
&quot;On Target&quot;, &quot;On Target&quot;,
&quot;Performance Data Not Available&quot;, &quot;Performance Data Not Available&quot;,&quot;Status Flag&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red = NO Data, Yellow = Off Target, Green = On Target,  Blue = Not Available</inlineHelpText>
        <label>Q-3 Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q3_Explanation_of_Status__c</fullName>
        <label>Q3 Explanation of Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q3_Likelihood__c</fullName>
        <label>Q3 Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q3_Risks_and_Challenges__c</fullName>
        <label>Q3 Risks and Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q3_Status__c</fullName>
        <label>Q3 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Target</fullName>
                </value>
                <value>
                    <fullName>Off Target</fullName>
                </value>
                <value>
                    <fullName>Performance Not Reported</fullName>
                </value>
                <value>
                    <fullName>Performance Data Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q3_Target__c</fullName>
        <label>Q3 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4_Risks_and_Challenges__c</fullName>
        <label>Q4 Risks and Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Denominator_Definition__c</fullName>
        <formula>Performance_Measure__r.Denominator_Definition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Numerator_Definition__c</fullName>
        <formula>Performance_Measure__r.Numerator_Definition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Q1_Denominator__c</fullName>
        <label>Q1 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Q1_Numerator__c</fullName>
        <label>Q1 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Q2_Denominator__c</fullName>
        <label>Q2 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Q2_Numerator__c</fullName>
        <label>Q2 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Q3_Denominator__c</fullName>
        <label>Q3 Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Q3_Numerator__c</fullName>
        <label>Q3 Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used only for the BBI team to lock down the target fields on The  Indicator reports object.</description>
        <label>Target Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Support__c</fullName>
        <defaultValue>&quot;Enter performance results in the native units for the numerator of the measure and the denominator of the measure.  Report numbers in cumulative performance to the date reported using the appropriate units.&quot;</defaultValue>
        <label>Target Support</label>
        <type>TextArea</type>
    </fields>
    <label>Performance Result</label>
    <nameField>
        <displayFormat>Report-{0000000000}</displayFormat>
        <label>Performance Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Results</pluralLabel>
    <recordTypes>
        <fullName>Performance_Result_Default</fullName>
        <active>true</active>
        <label>Performance Result Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Performance_Results_Read_Only</fullName>
        <active>true</active>
        <description>Used to facilitate workflow to make records uneditable once FY is completed.</description>
        <label>Performance Results Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Q1_actuals</fullName>
        <active>true</active>
        <description>Locks down q1 actuals after they have been entered and the lock Q1 actuals checkbox has been checked.</description>
        <errorConditionFormula>AND(OR( ISCHANGED(  Q1_Actual__c ),  ISCHANGED( A_Q1_Denominator__c ), ISCHANGED( A_Q1_Numerator__c ) ),Lock_Q1_Actuals__c  = TRUE)</errorConditionFormula>
        <errorMessage>Actuals have been locked for editing for this quarter and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Q2_actuals</fullName>
        <active>true</active>
        <description>Locks down q2 actuals after they have been entered and the lock Q1 actuals checkbox has been checked.</description>
        <errorConditionFormula>AND(OR( ISCHANGED(  Q2_Actual__c ),  ISCHANGED( A_Q2_Denominator__c ), ISCHANGED( A_Q2_Numerator__c ) ),Lock_Q2_Actuals__c  = TRUE)</errorConditionFormula>
        <errorMessage>Actuals have been locked for editing for this quarter and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Q3_actuals</fullName>
        <active>true</active>
        <description>Locks down q3 actuals after they have been entered and the lock Q1 actuals checkbox has been checked.</description>
        <errorConditionFormula>AND(OR( ISCHANGED(  Q3_Actual__c ),  ISCHANGED( A_Q3_Denominator__c ), ISCHANGED( A_Q3_Numerator__c ) ),Lock_Q3_Actuals__c  = TRUE)</errorConditionFormula>
        <errorMessage>Actuals have been locked for editing for this quarter and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Q4_actuals</fullName>
        <active>true</active>
        <description>Locks down q4 actuals after they have been entered and the lock Q1 actuals checkbox has been checked.</description>
        <errorConditionFormula>AND( ISCHANGED(  Q4_Actual__c ),  Lock_Q4_Actuals__c  = TRUE)</errorConditionFormula>
        <errorMessage>Actuals have been locked for editing for this quarter and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Targets</fullName>
        <active>true</active>
        <description>This will make all target fields locked for editing except for the CFO BBI team.</description>
        <errorConditionFormula>AND(OR( ISCHANGED( Q1_Target__c),ISCHANGED( Q2_Target__c),ISCHANGED( Q3_Target__c),ISCHANGED( Q4_Target__c), ISCHANGED( T_Q1_Denominator__c ), ISCHANGED( T_Q1_Numerator__c ), ISCHANGED( T_Q2_Denominator__c ), ISCHANGED( T_Q2_Numerator__c ), ISCHANGED( T_Q3_Denominator__c ), ISCHANGED( T_Q3_Numerator__c ) , ISCHANGED( T_Q4_Denominator__c ), ISCHANGED( T_Q4_Numerator__c )),  Lock_Targets__c  = TRUE)</errorConditionFormula>
        <errorDisplayField>Target_Lock__c</errorDisplayField>
        <errorMessage>You may not edit your targets once they have been entered.</errorMessage>
    </validationRules>
</CustomObject>